ensure heading is vertically aligned and all star ratings are flex items

--- a/Trillo/css/main.css
+++ b/Trillo/css/main.css
@@ -64,7 +64,7 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -246,10 +246,19 @@ body {
 
 .overview {
   display: flex;
-  justify-content: space-between;
+  border-bottom: 1px solid var(--color-grey-light-2);
+  align-items: center;
+}
+.overview__heading {
+  font-size: 2.25rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 1.5rem 3rem;
 }
 .overview__stars {
   margin-right: auto;
+  display: flex;
 }
 .overview__icon-star, .overview__icon-location {
   width: 1.75rem;
