--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -202,13 +202,20 @@
 /// HOTEL OVERVIEW
 .overview {
   display: flex;
-  justify-content: space-between;
+  border-bottom: 1px solid var(--color-grey-light-2);
+  align-items: center;
 
   &__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem;
   }
 
   &__stars {
     margin-right: auto;
+    display: flex;
   }
 
   &__icon-star,
